<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="android.view.View" />

        <!--<variable
            name="filterViewModel"
            type="com.kincarta.app.presentation.views.filter.FilterCaseStudiesViewModel" />
-->
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="6dp"
                android:paddingEnd="16dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_baseline_close_24"
                app:title="Filter Case Studies"
                app:titleTextColor="@color/white" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_save_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/label_save"
                        android:textSize="@dimen/text_margin_20"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/layout_main"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp">

            <TextView
                android:id="@+id/tv_sort_by"
                android:text="@string/sort_by"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_sort_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                app:singleSelection="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_alphabetically"
                    android:text="@string/lbl_alphabetical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/margin_8dp"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@drawable/bg_chip_state_list" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_alphabetically_reverse"
                    android:text="@string/lbl_reverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/margin_8dp"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@drawable/bg_chip_state_list" />
            </com.google.android.material.chip.ChipGroup>
            <TextView
                android:id="@+id/tv_category"
                android:layout_below="@+id/chip_sort_group"
                android:text="@string/lbl_category"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_category_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_category"
                android:paddingTop="@dimen/margin_10dp"
                app:singleSelection="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.google.android.material.chip.ChipGroup>

        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
