<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="caseStudiesViewModel"
            type="com.kincarta.app.ui.views.CaseStudiesViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_cases"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_data" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/case_scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <RelativeLayout
                        android:id="@+id/main_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="@dimen/margin_10dp"
                            android:layout_marginTop="@dimen/margin_10dp"
                            android:layout_marginEnd="@dimen/margin_10dp"
                            android:src="@drawable/ic_baseline_filter_alt_24" />

                        <LinearLayout
                            android:id="@+id/layout_filters"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/iv_filter"
                            android:layout_margin="@dimen/margin_10dp"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <Button
                                android:id="@+id/btn_clear_filters"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/margin_5dp"
                                android:text="@string/clear_filter"
                                android:textAllCaps="false" />

                            <TextView
                                android:id="@+id/tv_sort_by"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sort_by"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <com.google.android.material.chip.ChipGroup
                                android:id="@+id/chip_sort_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="20dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:singleSelection="true">

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/chip_alphabetically"
                                    style="@style/Widget.MaterialComponents.Chip.Choice"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checkable="true"
                                    android:gravity="center"
                                    android:padding="@dimen/margin_8dp"
                                    android:text="@string/lbl_alphabetical"
                                    android:textAppearance="?android:attr/textAppearance"
                                    android:textColor="@color/white"
                                    app:chipBackgroundColor="@drawable/bg_chip_state_list" />

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/chip_alphabetically_reverse"
                                    style="@style/Widget.MaterialComponents.Chip.Choice"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checkable="true"
                                    android:gravity="center"
                                    android:padding="@dimen/margin_8dp"
                                    android:text="@string/lbl_reverse"
                                    android:textAppearance="?android:attr/textAppearance"
                                    android:textColor="@color/white"
                                    app:chipBackgroundColor="@drawable/bg_chip_state_list" />
                            </com.google.android.material.chip.ChipGroup>

                            <TextView
                                android:id="@+id/tv_category"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/lbl_category"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <com.google.android.material.chip.ChipGroup
                                android:id="@+id/chip_category_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/margin_10dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:singleSelection="false">

                            </com.google.android.material.chip.ChipGroup>
                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/case_studies_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/layout_filters"
                            android:nestedScrollingEnabled="false"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="2" />

                        <ProgressBar
                            android:id="@+id/photos_progress_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true" />
                    </RelativeLayout>
                </androidx.core.widget.NestedScrollView>
            </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

</layout>